--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>f-react-kit</title>
+
+    <link rel="stylesheet" href="/node_modules/todomvc-app-css/index.css">
 </head>
 <body>
 
