more on the goal

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Lightweight nuclear physics for React">
   <title>f-react-kit</title>
 
   <style>
@@ -87,7 +88,8 @@
         Clojure’s <a href="http://clojure.org/atoms" target="blank_">atoms</a> and
         Om’s <a href="https://github.com/omcljs/om/wiki/Cursors" target="blank_">cursors</a>,
         and embraces functional programming style.</p>
-      <p>The real goal is to show a possibly better way of doing
+      <p>The real goal is to not propagate specific tools, but to introduce to
+        a different and possibly better way of managing data and building
         things with React. This is WIP and any contribution is welcome!</p>
       <div class="separator"></div>
       <p>A single global immutable state is a basic piece here.
