add mori-transit to libs list

--- a/index.html
+++ b/index.html
@@ -159,9 +159,14 @@
 
       <h4>Libs</h4>
       <ul>
-        <li><a href="http://swannodette.github.io/mori/" target="blank_">mori</a>’s persistent data structures</li>
-        <li>mori includes common functional bits, but if not enough use <a href="http://ramdajs.com/" target="blank_">Ramda</a></li>
-        <li><a href="http://visionmedia.github.io/page.js/" target="blank_">page.js</a> is a micro client-side router</li>
+        <li><a href="http://swannodette.github.io/mori/" target="blank_">mori</a>’s
+          persistent data structures</li>
+        <li>mori includes common functional bits, but if not enough use
+          <a href="http://ramdajs.com/" target="blank_">Ramda</a></li>
+        <li><a href="https://github.com/roman01la/mori-transit" target="blank_">mori-transit</a>
+          for transforming mori’s persistent data structures into/from JSON</li>
+        <li><a href="http://visionmedia.github.io/page.js/" target="blank_">page.js</a>
+          is a micro client-side router</li>
       </ul>
     </article>
   </main>
